<resources>
    <string name="app_name">Truck Tracker</string>
    <string name="menu_search">Search</string>
    <string name="menu_login">Account</string>
    <string name="action_my_favs">Favorites</string>
    <string name="truck_tracker">Truck Owner Sign In</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_account"><u>Create a New Account</u></string>
    <string name="username">username</string>
    <string name="create_an_account">Create an Account</string>
    <string name="return_to_login_screen">Return to Login Screen</string>
    <string name="owner_screen">Owner Screen</string>
    <string name="add_a_truck">Add A Truck</string>
    <string name="edit_existing_trucks">Edit Existing Trucks</string>
    <string name="send_an_update">Send An Update</string>
    <string name="name">name</string>
    <string name="search_by_name">Search by name:</string>
    <string name="enter_food_truck_name">Enter food truck name</string>
    <string name="search_in_maps">Search in Maps</string>
    <string name="food_trucks_nearby">Food Trucks Nearby</string>
    <string name="truck_name_placeholder">Truck name placeholder</string>
    <string name="food_photo">Images of food truck</string>
    <string name="truck_type_placeholder">Truck type placeholder</string>
    <string name="submit_search">Submit Search  </string>
    <string name="hours_placeholder">Sunday - Friday 8AM–11PM\nSaturday 8AM–12AM</string>
    <string name="updates">Updates</string>
    <string name="food_truck_name">Food truck name</string>
    <string name="address">Address(es)</string>
    <string name="schedule">Schedule</string>
    <string name="phone_number">Phone Number</string>
    <string name="owner">Owner</string>
    <string name="add_truck">Add Truck</string>
    <string name="back_to_owner_screen">Back to Owner Screen</string>
    <string name="truck_logo">Truck Logo</string>
</resources>
