<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context = "com.trucktracker.trucktracker.MainActivity"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:gravity="center"
        android:text="@string/truck_tracker"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <ImageView
        android:layout_width="218dp"
        android:layout_height="139dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/truck_tracker_logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:labelFor="@id/email"
        android:hint="@string/email"
        android:paddingTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:hint="@string/password"
        android:labelFor="@id/password"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/loginlink"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:gravity="center"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textColor="#4286f4"
        android:textSize="18sp"/>


</LinearLayout>