<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context = "com.trucktracker.trucktracker.MainActivity"
    >

    <TextView
        android:id="@+id/ownerTitle"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:gravity="center"
        android:text="@string/owner_screen"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/addtruckButton"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:text="@string/add_a_truck"/>

    <Button
        android:id="@+id/edittruckButton"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:text="@string/edit_existing_trucks"/>

    <Button
        android:id="@+id/sendupdateButton"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:text="@string/send_an_update"/>

    <TextView
        android:id="@+id/signoutlink"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:gravity="center"
        android:text="Sign Out"
        android:textAlignment="center"
        android:textColor="#4286f4"
        android:textSize="18sp"/>

</LinearLayout>