<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context = "com.trucktracker.trucktracker.MainActivity"
    >


    <!--&lt;!&ndash; The frame layout is here since we will be showing either-->
    <!--the empty view or the list view.  &ndash;&gt;-->
    <!--<FrameLayout-->
    <!--android:id="@+id/login_fragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_height="0dip"-->
    <!--android:layout_weight="1" >-->

    <!---->

    <!--</FrameLayout>-->



    <TextView
        android:id="@+id/signuptitle"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:labelFor="@id/newEmail"
        android:hint="@string/email"
        android:paddingTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:labelFor="@id/newUsername"
        android:hint="@string/username"
        android:paddingTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="200dp"
        android:hint="@string/password"
        android:labelFor="@id/newPassword"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:text="Sign Up"/>

    <TextView
        android:id="@+id/signuplink"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:gravity="center"
        android:text="@string/return_to_login_screen"
        android:textAlignment="center"
        android:textColor="#4286f4"
        android:textSize="18sp"/>


</LinearLayout>