<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.trucktracker.trucktracker.LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:gravity="center"
        android:text="@string/truck_tracker"
        android:textAlignment="center"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="68dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:labelFor="@id/username"
        android:hint="@string/email"
        android:paddingTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="136dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:hint="@string/password"
        android:labelFor="@id/password"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="197dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:onClick="Login"/>

    <Button
        android:id="@+id/showSignUp"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:text="Sign Up"
        android:onClick="loadStartUpPage"/>


</LinearLayout>

