<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/card_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="150dp"
            android:contentDescription="@string/food_photo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:id="@+id/truck_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truck_name_placeholder" />

            <TextView
                android:id="@+id/truck_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truck_type_placeholder" />
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>