<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/search_food_trucks_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect|textAutoComplete|textCapSentences"
                android:hint="@string/enter_food_truck_name"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/search_in_maps_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/search_in_maps" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_trucks_nearby"
                android:textSize="@dimen/large_label"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/nearby_trucks_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"/>
            
        </LinearLayout>


    </LinearLayout>
</ScrollView>