<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.trucktracker.trucktracker.NewUserActivity">

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:gravity="center"
        android:text="@string/welcome_to_trucktracker"
        android:textAlignment="center"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="68dp" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:labelFor="@id/newEmail"
        android:hint="@string/email"
        android:paddingTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="136dp" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="200dp"
        android:hint="@string/password"
        android:labelFor="@id/newPassword"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="197dp" />

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="200dp"
        android:hint="Username"
        android:labelFor="@id/newUsername"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="197dp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:onClick="SignUp"/>



</LinearLayout>